[build-system]
requires = [
	'setuptools>=61.0',
	'google-api-python-client>=1.4.2',
    'googletrans==4.0.0-rc1',
    'requests>=2.3.0',
    'pysrt>=1.0.1',
    'progressbar2>=3.34.3',
    'six>=1.11.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "autosrt"
version = "0.0.2"
authors = [
  { name="Bot Bahlul", email="bot.bahlul@gmail.com" },
]
description = "autosrt is a utility for automatic speech recognition and subtitle generation. It takes a video or an audio file as input, performs voice activity detection to find speech regions,  makes parallel requests to Google Web Speech API  to generate transcriptions for those regions,  (optionally) translates them to a different language, and finally saves the resulting subtitles to disk. It supports a variety of input and output languages  and can currently produce subtitles in SRT format."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/botbahlul/autosrt"
"Bug Tracker" = "https://github.com/botbahlul/autosrt/issues"